// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.emotion-11 {
  margin-left: 5px;
  margin-right: 5px;
  padding-top: 1%;
  width: calc(100% - 10px);
  float: left;
}

.emotion-2 {
  width: 270px;
  margin-left: 5px;
}

.emotion-0 {
  font-weight: bold;
  margin-left: 5px;
}

.emotion-1 {
  text-align: left;
}

.emotion-9 {
  min-height: 350px;
  padding-left: 5px;
}

<div
  className="emotion-11"
>
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      Pre-defined Properties
    </p>
  </div>
  <div />
  <form>
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2 btn btn-default"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Add new Azure property
      </button>
    </div>
  </form>
  <hr />
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      User-defined Properties
    </p>
  </div>
  <div />
  <form>
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2 btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Add new application specific property
      </button>
    </div>
  </form>
  <hr />
  <form>
    <div
      className="emotion-1 form-group"
    >
      <label
        className="emotion-0 control-label"
        htmlFor="formControlsMessageBodyText"
      >
        Body
      </label>
      <textarea
        className="emotion-9 form-control"
        id="formControlsMessageBodyText"
        onChange={[Function]}
        placeholder="Enter message body"
        type={undefined}
        value=""
      />
    </div>
  </form>
  <form>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Submit
    </button>
    <button
      className="btn btn-danger"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Reset Fields
    </button>
  </form>
</div>
`;

exports[`renders correctly from a predefined message 1`] = `
.emotion-23 {
  margin-left: 5px;
  margin-right: 5px;
  padding-top: 1%;
  width: calc(100% - 10px);
  float: left;
}

.emotion-2 {
  width: 270px;
  margin-left: 5px;
}

.emotion-0 {
  font-weight: bold;
  margin-left: 5px;
}

.emotion-1 {
  text-align: left;
}

.emotion-21 {
  min-height: 350px;
  padding-left: 5px;
}

.emotion-7 {
  padding-left: 5px;
  width: 20%;
  float: left;
}

.emotion-9 {
  padding-left: 5px;
  width: calc(80% - 80px);
  float: left;
}

.emotion-11 {
  padding-left: 5px;
  width: 80px;
  float: left;
}

.emotion-6 {
  min-height: 38px;
}

<div
  className="emotion-23"
>
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      Pre-defined Properties
    </p>
  </div>
  <div />
  <form>
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2 btn btn-default"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Add new Azure property
      </button>
    </div>
  </form>
  <hr />
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      User-defined Properties
    </p>
  </div>
  <div>
    <div>
      <form
        className="emotion-7"
      >
        <div
          className="form-group"
        >
          <input
            className="emotion-6 form-control"
            id="formControlsText"
            onChange={[Function]}
            placeholder="Enter property name"
            type="text"
            value="userDefinedProp1"
          />
        </div>
      </form>
      <form
        className="emotion-9"
      >
        <div
          className="form-group"
        >
          <input
            className="emotion-6 form-control"
            id="formControlsText"
            onChange={[Function]}
            placeholder="Enter property value"
            type="text"
            value="value1"
          />
        </div>
      </form>
      <div
        className="emotion-11"
      >
        <button
          className="emotion-6 btn btn-danger"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
    <div>
      <form
        className="emotion-7"
      >
        <div
          className="form-group"
        >
          <input
            className="emotion-6 form-control"
            id="formControlsText"
            onChange={[Function]}
            placeholder="Enter property name"
            type="text"
            value="userDefinedProp2"
          />
        </div>
      </form>
      <form
        className="emotion-9"
      >
        <div
          className="form-group"
        >
          <input
            className="emotion-6 form-control"
            id="formControlsText"
            onChange={[Function]}
            placeholder="Enter property value"
            type="text"
            value="value2"
          />
        </div>
      </form>
      <div
        className="emotion-11"
      >
        <button
          className="emotion-6 btn btn-danger"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
  <form>
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2 btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Add new application specific property
      </button>
    </div>
  </form>
  <hr />
  <form>
    <div
      className="emotion-1 form-group"
    >
      <label
        className="emotion-0 control-label"
        htmlFor="formControlsMessageBodyText"
      >
        Body
      </label>
      <textarea
        className="emotion-21 form-control"
        id="formControlsMessageBodyText"
        onChange={[Function]}
        placeholder="Enter message body"
        type={undefined}
        value="Hello world!"
      />
    </div>
  </form>
  <form>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Submit
    </button>
    <button
      className="btn btn-danger"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Reset Fields
    </button>
  </form>
</div>
`;
